compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_constructors.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1078
expression: "type Box { Box(x: Int) }\ntype Boxy { Box(Int) }"

---
error: Duplicate definition
  ┌─ /src/one/two.gleam:1:12
  │
1 │ type Box { Box(x: Int) }
  │            ^^^^^^^^^^^ First defined here
2 │ type Boxy { Box(Int) }
  │             ^^^^^^^^ Redefined here

`Box` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

